# PythonDelivRepo

./: .gitignore  EncodingUtils.py  IpNet.py  Main.py  NewFile2.py  README.md  TestScenarios_video.txt  WeatherForecast.py  _cache_file.pkl  app.py  cache_file.pkl  common_imports.py  pyproject.toml  requirements.txt  requirments.txt  test_example.py
